overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ h1 {
   font-family: inherit;
   font-size: 16px;
   outline: none;
+  width:100%;
 }
 #terminal-input::selection {
   background: #ffffff;
